# click-tt-auto

./: .dockerignore  .env.example  .gitignore  .npmignore  .prettierignore  .project  AGENTS.md  CLAUDE.md  CONTINUE.md  CONTINUE_LOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  tsconfig.json  validate.ps1
.specify/: feature.json
data/: Tabellen__aktuelle_Tabellen_-_Filter_Meisterschaft__20260715120301.csv  fine-catalogue.example.json  hall-capacity.csv  upper-fixed.csv
docs/: raster-fixed-assignments.md  raster-open-points.md  raster-pdf-extraction-expectations.md
scripts/: build-review-model.ts  export-admin-pdf-teams.ts  export-optimized-raster-review.ts  export-public-team-context.ts  export-raster-assignment.ts  join-admin-pdf-public-context.ts  report-spielwoche-overages.ts  solve-raster-cpsat.py  solve-raster-heuristic.ts  update-spec-overview.mjs
specs/: OVERVIEW.md
src/: approval-checkbox.ts  approver.ts  auth.ts  config.ts  dom.ts  fines.ts  index.ts  match-detail.ts  match-list.ts  navigation.ts  progress.ts  raster-index.ts  reporter.ts  types.ts  validator.ts
webapp/: .env.docker.example  .env.example  .gitignore  .jscpd.json  AGENTS.md  AI_TESTING.md  AUTH_FLOWS.md  CLAUDE.md  CONTINUE.md  CONTINUE_LOG.md  Dockerfile.app  Dockerfile.worker  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  (+8 more)
webapp/worker/: README.md  pyproject.toml
webapp/worker/src/starter_worker/: config.py  db.py  logging.py  main.py
webapp/worker/tests/: conftest.py  test_main.py  worker_db.py
(+452 files in other folders)
